--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -4,10 +4,14 @@ on: push
 
 jobs:
   test:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12", "3.13"] 
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.12", "3.13"]
+        exclude:
+          - os: windows-latest
+            python-version: "3.13"
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Checkout code
@@ -17,6 +21,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        check-latest: true
+
+    - name: Install dependencies
+      if: runner.os == 'Windows'
+      run: pip install -r requirements.txt
    
     - name: Run tests
       run: |
